# MasterProject

./: .gitignore  CMakeLists.txt  README.md
julia/: allocation.jl  csvReader.jl
plot/: main.py
src/: CSVHandler.cpp  CSVHandler.h  fitness.cpp  main.cpp
